# airfare-monitor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  TODO.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.agent/plans/: 001-airfare-tracker.md  002-frontend-polish.md  003-fixes.md  004-chart-and-layout-fixes.md  005-chart-improvements.md  006-logging-monitoring.md  008-airline-logos.md  009-row-color-chart-match.md  010-tracker-filter-sidebar.md  011-airline-filter.md  012-card-sparkline-polish.md  013-card-price-rail.md  014-card-font-trendchip.md  014-deploy-to-server.md  015-deploy-execution.md
.agent/reports/: 001-phase-1-end.md  001-phase-1-start.md  001-phase-1.md  001-phase-2-end.md  001-phase-2.md  001-phase-3-end.md  001-phase-3.md  001-phase-4-end.md  001-phase-4-start.md  001-phase-5-end.md  001-phase-5-start.md  001-phase-6-end.md  002-phase-1-start.md  002-phase-all-end.md  003-end.md  003-start.md  004-end.md  004-phase-1-start.md  005-end.md  005-frontend-chart-fixes.md  005-phase-1-start.md  005-post-fixes.md  006-end.md  006-missing-plan-items.md  006-phase-1-start.md  007-code-review-fixes-end.md  007-code-review-fixes-start.md  (+22 more)
backend/: api.py  db.py  fingerprint.py  main.py  models.py  pages.py  scheduler.py
tests/: conftest.py  test_airline_logo.py  test_api.py  test_best_price.py  test_chart_colors.py  test_chart_data.py  test_db.py  test_delta.py  test_filters.py  test_fingerprint.py  test_logging.py  test_normalization.py  test_notification_log.py  test_notifications.py  test_pages.py  test_sources.py  test_sparkline.py
(+19 files in other folders)
